WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270506
[Crash in com.apple.WebKit.WebContent] WTF::Detail::CallableWrapper<WebKit::MediaSourcePrivateRemote::setMediaPlayerReadyState(WebCore::MediaPlayerReadyState)::$_0, void>::call
https://bugs.webkit.org/show_bug.cgi?id=270506
Summary
[Crash in com.apple.WebKit.WebContent] WTF::Detail::CallableWrapper<WebKit::M...
Jean-Yves Avenard [:jya]
Reported
2024-03-04 22:45:37 PST
``` 9 WTF::RawPtrTraits<IPC::Connection>::unwrap(IPC::Connection* const&) 9 WTF::Ref<IPC::Connection, WTF::RawPtrTraits<IPC::Connection>, WTF::DefaultRefDerefTraits<IPC::Connection>>::get() const 9 WebKit::GPUProcessConnection::connection() 9 WebKit::MediaSourcePrivateRemote::setMediaPlayerReadyState(WebCore::MediaPlayerReadyState)::$_0::operator()() const ==> 9 WTF::Detail::CallableWrapper<WebKit::MediaSourcePrivateRemote::setMediaPlayerReadyState(WebCore::MediaPlayerReadyState)::$_0, void>::call() <== 9 WTF::Function<void ()>::operator()() const 9 WTF::(anonymous namespace)::DispatchWorkItem::operator()() 9 void WTF::dispatchWorkItem<WTF::(anonymous namespace)::DispatchWorkItem>(void*) 9 _dispatch_client_callout 9 _dispatch_continuation_invoke_inline 9 _dispatch_continuation_pop_inline 9 _dispatch_lane_drain 9 _dispatch_lane_serial_drain 9 _dispatch_lane_invoke2 9 _dispatch_queue_class_invoke 9 _dispatch_lane_invoke 9 _dispatch_root_queue_drain_deferred_wlh 9 _dispatch_wlh_worker_thread 9 _dispatch_workloop_worker_thread 9 _pthread_wqthread 9 start_wqthread ```
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2024-03-04 22:45:51 PST
rdar://123748005
Jean-Yves Avenard [:jya]
Comment 2
2024-03-04 22:48:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25474
EWS
Comment 3
2024-03-05 01:36:24 PST
Committed
275680@main
(341dd78efbba): <
https://commits.webkit.org/275680@main
> Reviewed commits have been landed. Closing PR #25474 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug